Restyled home.html

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
         </form>
-        <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text center-div ">
+        <a href="{{ url_for( 'recipes', username=username) }} " class="go-back-btn div-btn center-text">
             <div>Go back</div>
         </a>
     </div>
