--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,117 +45,56 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-body {
-  font-family: 'Oswald', sans-serif;
-  letter-spacing: 1px; }
+.ingredients-link-img,
+.recipes-link-img {
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75); }
 
 header {
-  height: 50px;
-  margin: 0 0 50px; }
+  -webkit-box-shadow: 0px 10px 7px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 7px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 7px -8px rgba(0, 0, 0, 0.75); }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Mukta Malar', sans-serif;
-  clear: both;
-  font-weight: 600;
-  margin: 10px 0; }
+.leaderboard-intro-bg-img {
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: auto; }
 
-h1 {
-  font-size: 42px; }
-
-.container {
-  max-width: 992px;
-  margin: 0 auto; }
-
-.row {
-  clear: both;
-  display: block;
-  width: 100%; }
-
-p {
-  margin: 10px 0; }
-
-a,
-a:visited {
-  text-decoration: none;
-  color: #ffffff; }
-
-.center-div {
-  margin: 0 auto; }
-
-.center-text {
-  text-align: center; }
-
-.clear-float {
-  clear: both; }
-
-.sticky-div {
-  position: sticky;
-  top: 0;
-  background-color: #fff; }
-
-.uppercase {
-  text-transform: uppercase; }
-
-.clickable-link {
-  display: block; }
-
+/*----------------- Main colors*/
+/* --- Widths */
 .hide-me-btn {
-  display: block;
-  width: 150px;
-  border-radius: 25px;
-  margin-top: 20px; }
-
-.hidden-div {
-  display: none; }
-
-.div-btn {
-  width: 75px;
-  height: 20px;
-  float: right;
-  margin: 10px;
-  cursor: pointer; }
+  display: block; }
 
 button,
 .div-btn {
-  -moz-box-shadow: inset 0px -3px 7px 0px #29bbff;
-  -webkit-box-shadow: inset 0px -3px 7px 0px #29bbff;
-  box-shadow: inset 0px -3px 7px 0px #29bbff;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #2dabf9), color-stop(1, #0688fa));
-  background: -moz-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
-  background: -webkit-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
-  background: -o-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
-  background: -ms-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
-  background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2dabf9', endColorstr='#0688fa', GradientType=0);
-  background-color: #2dabf9;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  border: 1px solid #0b0e07;
-  display: inline-block;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  width: 150px;
+  margin: 10px;
   cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
+  display: inline-block;
+  background-color: #000;
+  padding: 5px;
   font-size: 15px;
+  color: #fff;
   padding: 9px 23px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #263666; }
+  box-sizing: border-box;
+  float: left;
+  transition: background 1s linear; }
 
 button:hover,
 .div-btn:hover {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0688fa), color-stop(1, #2dabf9));
-  background: -moz-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
-  background: -webkit-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
-  background: -o-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
-  background: -ms-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
-  background: linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0688fa', endColorstr='#2dabf9', GradientType=0);
-  background-color: #0688fa; }
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f99806), color-stop(1, #ffff00));
+  background: -moz-linear-gradient(top, #f99806 5%, #ffff00 100%);
+  background: -webkit-linear-gradient(top, #f99806 5%, #ffff00 100%);
+  background: -o-linear-gradient(top, #f99806 5%, #ffff00 100%);
+  background: -ms-linear-gradient(top, #f99806 5%, #ffff00 100%);
+  background: linear-gradient(to bottom, #f99806 5%, #ffff00 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$flame-orange', endColorstr='$flame-yellow', GradientType=0);
+  background-color: #f99806;
+  color: #ff0000; }
 
 button:active,
 .div-btn:active {
@@ -164,18 +103,100 @@ button:active,
 .submit-new-ingredient-btn {
   width: 20%; }
 
+.update-ingredient-btn,
+.update-recipe-btn,
+.confirm-delete-recipe-btn,
+.delete-recipe-btn {
+  float: left; }
+
+.grow {
+  transition-property: transform;
+  transition-duration: 1s;
+  transition-timing-function: linear; }
+
+.grow:hover {
+  transform: scale(1.25); }
+
+.fade-in-text {
+  opacity: 1;
+  transition-property: opacity;
+  transition-duration: 4s;
+  transition-timing-function: linear; }
+
+.shake {
+  -webkit-animation-name: shake;
+  -ms-animation-name: shake;
+  -ms-animation-duration: 2000ms;
+  -webkit-animation-duration: 2000ms;
+  -webkit-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  -ms-animation-timing-function: ease-in-out; }
+
+@keyframes shake {
+  0% {
+    transform: rotate(0.5deg); }
+  10% {
+    transform: rotate(-0.5deg); }
+  20% {
+    transform: rotate(0.5deg); }
+  30% {
+    transform: rotate(-0.5deg); }
+  40% {
+    transform: rotate(0.5deg); }
+  50% {
+    transform: rotate(0deg); } }
+.flame {
+  animation-name: flame;
+  animation-duration: 2s;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards; }
+
+@keyframes flame {
+  0% {
+    text-shadow: 25px 16px 56px #f99806; }
+  50% {
+    text-shadow: 8px -5px 32px #ffff00; }
+  100% {
+    text-shadow: 0px -5px 32px #f99806; } }
+.zero-to-hero {
+  transition-property: transform;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+  animation-name: hero;
+  animation-duration: 5s;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards; }
+
+@keyframes hero {
+  0% {
+    transform: scale(0); }
+  100% {
+    transform: scale(1); } }
 header {
-  color: #ffffff;
-  background-color: #0688fa; }
+  color: #fff;
+  background-color: #000;
+  height: 96px;
+  position: sticky;
+  top: 0px;
+  background-size: contain;
+  z-index: 10000; }
 
 nav,
 nav ul {
+  font-family: 'Oswald', sans-serif;
   margin: 5px;
-  padding: 0; }
+  padding: 3px; }
 
 nav {
   margin: 0 auto;
-  max-width: 1122px; }
+  max-width: 1122px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around; }
 
 nav ul,
 nav ul li {
@@ -183,12 +204,18 @@ nav ul li {
 
 nav ul li {
   display: block;
-  margin: 5px 30px; }
+  margin: 5px 30px;
+  background-color: #000;
+  padding: 5px; }
 
 .logo {
   float: left;
-  width: 100px;
-  margin: 5px; }
+  margin: 10px;
+  padding: 8px 30px 8px 8px;
+  height: 56px; }
+
+.nav-icon {
+  padding: 0 12px 0 0; }
 
 .round-pop-up-container {
   position: absolute;
@@ -218,6 +245,124 @@ hr {
   width: 300px;
   margin: 5px 0; }
 
+.welcome-message {
+  padding: 20px 20px 25px;
+  text-align: center;
+  width: 80%;
+  position: relative;
+  top: 45px;
+  margin: 0 auto;
+  color: #ff0000;
+  z-index: 2; }
+
+.welcome-message-section {
+  margin: 112px auto 0;
+  background-color: rgba(255, 255, 255, 0.75);
+  width: 800px;
+  border: 4px solid rgba(255, 82, 82, 0.92); }
+
+.welcome-header {
+  font-size: 82px;
+  margin: 38px auto; }
+
+.button-row {
+  margin: 90px 0 68px;
+  height: 80px;
+  display: flex;
+  justify-content: center; }
+
+.welcome-para {
+  color: #000;
+  display: block;
+  font-size: 13px;
+  line-height: 25px;
+  width: 75%;
+  text-align: center;
+  margin: 0 auto;
+  padding: 60px 0; }
+
+.home-image {
+  background-image: url("../images/bbq.jpg");
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: -1;
+  background-repeat: repeat;
+  background-position: center;
+  background-size: cover; }
+
+.recipes-intro-section,
+.ingredients-intro-section {
+  width: 100%;
+  min-height: 800px; }
+
+.ingredients-link-img,
+.recipes-link-img {
+  height: 285px;
+  float: right;
+  border: 20px #fff solid;
+  margin: 40px 0 0; }
+
+.ingredients-link-img {
+  margin: 64px 0 0; }
+
+.ingredients-intro-text {
+  width: 100%;
+  padding: 50px; }
+
+.intro-content-left,
+.intro-content-right {
+  margin-top: 200px; }
+
+.intro-content-left {
+  padding-left: 400px; }
+
+.intro-content-right {
+  padding-right: 400px; }
+
+.ingredients-intro-left,
+.ingredients-intro-right {
+  padding-bottom: 30px; }
+
+.ingredients-intro-right {
+  padding-left: 50px; }
+
+.ingredients-intro-left {
+  padding-right: 50px; }
+
+.leaderboard-intro {
+  width: 100%;
+  min-height: 800px;
+  height: 800px;
+  background-color: #fff; }
+
+.leaderboard-intro-container {
+  position: relative;
+  top: 200px;
+  left: 400px;
+  width: 440px; }
+
+.leaderboard-intro-bg-img {
+  background-image: url("../images/head-chef.jpg");
+  width: 100%;
+  height: 100%; }
+
+.sign-up-header {
+  margin: 50px 0 0;
+  max-width: 600px; }
+
+.sign-up-header ~ .sign-up-form {
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+  margin: 20px auto;
+  border: 1px solid #000;
+  width: 400px;
+  text-align: center; }
+
+.sign-up-btn {
+  float: none; }
+
 .profile-pic {
   width: 200px;
   height: 200px; }
@@ -246,9 +391,15 @@ hr {
   margin: 0 10px;
   width: 200px; }
 
-.recipe-row {
-  width: 47%;
+.recipe-row,
+.recipe-row-right {
   float: left; }
+
+.recipe-row-right {
+  width: 30%; }
+
+.recipe-row {
+  width: 65%; }
 
 .recipe-row,
 .ingredient-row {
@@ -263,8 +414,10 @@ hr {
   transition-duration: 1s;
   transition-timing-function: linear; }
 
-.recipe-row:hover,
-.ingredient-row:hover {
+.ingredient-row {
+  width: 90%; }
+
+.recipe-row:hover {
   background-color: #b8e3f9; }
 
 .checkbox-switch {
@@ -272,10 +425,10 @@ hr {
   display: block; }
 
 .fa-exclamation-circle {
-  color: red; }
+  color: #ff3434; }
 
 .fa-smile {
-  color: #53f953; }
+  color: #00f500; }
 
 .edit-ingredient-img {
   width: 200px;
@@ -293,17 +446,13 @@ td {
   width: 30%;
   text-align: left; }
 
-.column {
-  width: 50%;
-  float: left; }
-
 .fa-minus-square,
 .fa-plus-square {
   font-size: 40px;
   cursor: pointer; }
 
 .fa-minus-square {
-  color: red; }
+  color: #ff3434; }
 
 .fa-plus-square {
   color: #00f500; }
@@ -311,5 +460,112 @@ td {
 .ingredient-box {
   width: 40%;
   margin: 0 5px 20px 0; }
+
+body {
+  font-family: 'Mukta Malar', sans-serif;
+  letter-spacing: 1px; }
+
+section {
+  box-sizing: border-box; }
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Oswald', sans-serif;
+  clear: both;
+  margin: 10px 0; }
+
+h1 {
+  font-family: 'Mukta Malar', sans-serif;
+  font-weight: 600; }
+
+.container {
+  max-width: 1122px;
+  margin: 0 auto; }
+
+.row {
+  clear: both;
+  display: block;
+  width: 100%; }
+
+p {
+  padding: 26px 20px 26px 0;
+  letter-spacing: 3px;
+  font-size: 13px;
+  line-height: 20px; }
+
+a,
+a:visited {
+  text-decoration: none;
+  color: #fff; }
+
+.center-div {
+  margin: 0 auto; }
+
+.center-text {
+  text-align: center; }
+
+.clear-float {
+  clear: both; }
+
+.sticky-div {
+  position: sticky;
+  top: 70px;
+  background-color: #fff; }
+
+.uppercase {
+  text-transform: uppercase; }
+
+.clickable-link {
+  display: block; }
+
+.hidden-div {
+  display: none; }
+
+.no-float {
+  float: none; }
+
+.vert-center {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%); }
+
+.column {
+  width: 50%;
+  float: left;
+  box-sizing: border-box; }
+
+.section-title {
+  font-size: 28px;
+  letter-spacing: 2px;
+  font-weight: 600; }
+
+.see-through-bg-yellow {
+  background-color: rgba(255, 247, 0, 0.92); }
+
+.see-through-bg-red {
+  background-color: rgba(255, 82, 82, 0.92); }
+
+footer {
+  background-color: #000;
+  min-height: 300px; }
+
+.footer-item {
+  color: #fff;
+  float: left;
+  display: inline-block;
+  margin: 25px 50px;
+  width: 24%; }
+
+.no-opacity {
+  opacity: 0; }
+
+.standard-section-height {
+  min-height: 720px; }
+
+input {
+  margin: 20px 0; }
 
 /*# sourceMappingURL=styles.css.map */
