--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -1,34 +1,39 @@
 @import "helpers/cssreset";
+@import "helpers/placeholders";
+@import "helpers/colors";
+@import "helpers/media-queries";
+@import "components/buttons";
+@import "components/animations";
+@import "components/base";
+@import "components/pages";
 
 // General styling -------------------------------------------------------------
 body {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Mukta Malar', sans-serif;
     letter-spacing: 1px;
 }
 
-header {
-    height: 50px;
-    margin: 0 0 50px;
+section {
+    box-sizing: border-box;
 }
 
-h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-family: 'Mukta Malar', sans-serif;
+    font-family: 'Oswald', sans-serif;
     clear: both;
-    font-weight: 600;
     margin: 10px 0;
 }
 
 h1 {
-    font-size: 42px;
+    font-family: 'Mukta Malar', sans-serif;
+    font-weight: 600;
 }
 
 .container {
-    max-width: 992px;
+    max-width: 1122px;
     margin: 0 auto;
 }
 
@@ -39,13 +44,16 @@ h1 {
 }
 
 p {
-    margin: 10px 0;
+    padding: 26px 20px 26px 0;
+    letter-spacing: 3px;
+    font-size: 13px;
+    line-height: 20px;
 }
 
 a,
 a:visited {
     text-decoration: none;
-    color: #ffffff;
+    color: $white;
 }
 
 .center-div {
@@ -62,8 +70,8 @@ a:visited {
 
 .sticky-div {
     position: sticky;
-    top: 0;
-    background-color: #fff;
+    top: 70px;
+    background-color: $white;
 }
 
 .uppercase {
@@ -74,255 +82,61 @@ a:visited {
     display: block;
 }
 
-// Buttons ---------------------------------------------------------------------
-.hide-me-btn {
-    display: block;
-    width: 150px;
-    border-radius: 25px;
-    margin-top: 20px;
-}
-
 .hidden-div {
     display: none;
 }
 
-.div-btn {
-    width: 75px;
-    height: 20px;
-    float: right;
-    margin: 10px;
-    cursor: pointer;
+.no-float {
+    float: none;
 }
 
-button,
-.div-btn {
-    -moz-box-shadow: inset 0px -3px 7px 0px #29bbff;
-    -webkit-box-shadow: inset 0px -3px 7px 0px #29bbff;
-    box-shadow: inset 0px -3px 7px 0px #29bbff;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #2dabf9), color-stop(1, #0688fa));
-    background: -moz-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
-    background: -webkit-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
-    background: -o-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
-    background: -ms-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
-    background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2dabf9', endColorstr='#0688fa', GradientType=0);
-    background-color: #2dabf9;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    border: 1px solid #0b0e07;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 15px;
-    padding: 9px 23px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #263666;
-}
-
-button:hover,
-.div-btn:hover {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0688fa), color-stop(1, #2dabf9));
-    background: -moz-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
-    background: -webkit-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
-    background: -o-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
-    background: -ms-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
-    background: linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0688fa', endColorstr='#2dabf9', GradientType=0);
-    background-color: #0688fa;
-}
-
-button:active,
-.div-btn:active {
-    transform: scale(.95, .95);
-}
-
-.submit-new-ingredient-btn {
-    width: 20%;
-}
-
-// Header Styling --------------------------------------------------------------
-header {
-    color: #ffffff;
-    background-color: #0688fa;
-}
-
-nav,
-nav ul {
-    margin: 5px;
-    padding: 0;
-}
-
-nav {
-    margin: 0 auto;
-    max-width: 1122px;
-}
-
-nav ul,
-nav ul li {
-    float: right;
-}
-
-nav ul li {
-    display: block;
-    margin: 5px 30px;
-}
-
-.logo {
-    float: left;
-    width: 100px;
-    margin: 5px;
-}
-
-// Message containers ----------------------------------------------------------
-.round-pop-up-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    -webkit-box-shadow: 7px 10px 32px -5px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 7px 10px 32px -5px rgba(0, 0, 0, 0.75);
-    box-shadow: 7px 10px 32px -5px rgba(0, 0, 0, 0.75);
-    background-color: #8adade;
-    z-index: 100;
-}
-
-.flashed-message {
-    width: 70%;
-    margin-top: 30%;
-}
-
-// Home page -------------------------------------------------------------------
-ul {
-    list-style: none;
-}
-
-input,
-hr {
-    width: 300px;
-    margin: 5px 0;
-}
-
-// Profile page ----------------------------------------------------------------
-.profile-pic {
-    width: 200px;
-    height: 200px;
-}
-
-// Ingredient / Recipes lists -------------------------------------------------------------
-.list-headings {
-    height: 50px;
-    margin: 0 0 20px;
-}
-
-.recipe-list-item,
-.ingredient-list-item {
-    display: inline-block;
-    float: left;
-    margin: 0 10px;
-    width: 400px;
-    color: #000;
-}
-
-.recipe-img,
-.ingredient-img {
-    width: 75px;
-    height: 75px;
-}
-
-.recipe-list-item,
-.ingredient-list-item {
-    display: inline-block;
-    float: left;
-    margin: 0 10px;
-    width: 200px;
-}
-
-.recipe-row {
-    width: 47%;
-    float:left;
-}
-
-.recipe-row,
-.ingredient-row {
-    height: 76px;
-    border: 1px black solid;
-    margin: 0 auto 10px;
-    padding: 10px;
-    -webkit-box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.75);
-    transition-property: background-color;
-    transition-duration: 1s;
-    transition-timing-function: linear;
-}
-
-.recipe-row:hover,
-.ingredient-row:hover {
-    background-color: #b8e3f9;
-}
-
-.checkbox-switch {
-    width: 20px;
-    display: block;
-}
-
-.fa-exclamation-circle {
-    color: red; // #danger-red
-}
-
-.fa-smile {
-    color: #53f953; // #safe-green
-}
-
-//  Edit ingredients -----------------------------------------------------------
-.edit-ingredient-img {
-    width: 200px;
-    height: 200px;
-}
-
-.instructions-box {
-    width: 90%;
-    height: 300px;
-}
-
-.new-ingredient-container {
-    min-height: 150px;
-}
-
-// Edit Recipes ----------------------------------------------------------------
-th,
-td {
-    width: 30%;
-    text-align: left;
+.vert-center {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .column {
     width: 50%;
     float: left;
+    box-sizing: border-box;
 }
 
-.fa-minus-square,
-.fa-plus-square {
-    font-size: 40px;
-    cursor: pointer;
+.section-title {
+    font-size: 28px;
+    letter-spacing: 2px;
+    font-weight: 600;
 }
 
-.fa-minus-square {
-    color: red;
+.see-through-bg-yellow {
+    background-color: rgba(255,247,0,.92);
 }
 
-.fa-plus-square {
-    color: #00f500;
+.see-through-bg-red {
+    background-color: rgba(255,82,82,.92);
 }
 
-.ingredient-box {
-    width: 40%;
-    margin: 0 5px 20px 0;
+footer {
+    background-color: $black;
+    min-height: 300px;
+}
+
+.footer-item {
+    color: $white;
+    float: left;
+    display: inline-block;
+    margin: 25px 50px;
+    width: 24%;
+}
+
+.no-opacity {
+    opacity: 0;
+}
+
+.standard-section-height {
+    min-height: 720px;
+}
+
+input {
+    margin: 20px 0;
 }
