--- a/templates/ingredients.html
+++ b/templates/ingredients.html
@@ -28,11 +28,11 @@
                 <i class="fas fa-smile"></i>
             {% endif %}
             </label>
-            <button><a href="{{ url_for('edit_ingredient', ingredient_id=ingredient._id) }}">Edit Ingredient</a></button>
+            <a href="{{ url_for('edit_ingredient', ingredient_id=ingredient._id) }}"><button>Edit Ingredient</button></a>
         </li>
         {% endfor %}
         <li class="clear-float">Need to add an ingredient?</li>
-        <button><a href="{{ url_for('add_ingredient', recipe_id='none') }}">Add Ingredient</a></button>
+        <a href="{{ url_for('add_ingredient', recipe_id='none') }}"><button>Add Ingredient</button></a>
     </ul>
 
 </div>
