--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -6,7 +6,7 @@
 
         <p>Please choose a recipe you would like to try from our list!</p>
         <p>Alternatively, why not add your own and see if people like it?</p>
-        <button><a href="{{ url_for('add_recipe') }}">Add recipe</a></button>
+        <a href="{{ url_for('add_recipe') }}"><button>Add recipe</button></a>
 
         <div class="row">
             <div class="list-headings">
@@ -34,28 +34,23 @@
             </div>
         </a>
         {% if recipe.author == user_id %}
-        <div class="recipe-row">
-            <div class="recipe-row-right">
-                <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
-                <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST" class="hidden-div round-pop-up-container hide-me">
-                    <p class="delete-confirmation-message uppercase flashed-message center-div">Are you sure you wish to delete this recipe?!</p>
-                    <div class="row">
-                        <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm Delete</button>
-                        <div class="cancel-delete-recipe-btn div-btn center-text center-div hide-me-btn">
-                            <p>Cancel</p>
-                        </div>
+        <div class="recipe-row-right">
+            <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
+            <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST" class="hidden-div round-pop-up-container hide-me">
+                <p class="delete-confirmation-message uppercase flashed-message center-div">Are you sure you wish to delete this recipe?!</p>
+                <div class="row">
+                    <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm Delete</button>
+                    <div class="cancel-delete-recipe-btn div-btn center-text center-div hide-me-btn">
+                        <p>Cancel</p>
                     </div>
-                </form>
-                <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
-                    <div class="div-btn center-text">Edit</div>
-                </a>
-            </div>
+                </div>
+            </form>
+            <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
+                <button class="center-text">Edit</button>
+            </a>
         </div>
         {% else %}
-        <div class="recipe-row">
-            <div class="recipe-row-right">
-            </div>
-        </div>
+        <div class="recipe-row-right"></div>
         {% endif %} {% endfor %}
     </div>
 </div>
