--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<div class="home-image"></div>
+<div class="home-image page-bg"></div>
 <div class="container">
     <section class="welcome-message-section zero-to-hero">
         <div class="welcome-message no-opacity">
@@ -9,7 +9,8 @@
                 <h3 class="uppercase">It's cooking time!</h2>
         </div>
         <div class="welcome-para-container no-opacity">
-            <p class="welcome-para">Add your own recipes and let others provide a review. Each review will be scored between 0 - 5 flames which we will accumulate for every recipe you add.<br>Will you be King or Queen of our leaderboard?!</p>
+            <p class="welcome-para">Add your own recipes and let others provide a review. Each review will be scored between 0 - 5 flames which we will accumulate for every recipe you add.</p>
+            <p class="welcome-para">Will you be King or Queen of our leaderboard?!</p>
         </div>
     </section>
 
@@ -20,7 +21,7 @@
         <a href="{{ url_for('recipes', username=username) }}"><button>Go to recipes</button></a>
     </div>
 </div>
-<section class="recipes-intro-section see-through-bg-yellow">
+<section class="recipes-intro-section see-through-bg-yellow standard-section-height">
     <div class="column intro-content-left">
         <h2 class="section-title uppercase">All of the recipes you'll ever need...</h2>
         <p>Food. Isn't it what life is all about? But what delicious meal will you cook next?</p>
@@ -33,7 +34,7 @@
     </div>
 </section>
 
-<section class="ingredients-intro-section">
+<section class="ingredients-intro-section standard-section-height">
     <div class="column intro-content-left ingredients-intro-left">
         <a href="{{ url_for('recipes', username=username) }}"><img src="{{ url_for('static', filename='images/ingredients-wallpaper.jpg') }}" class="ingredients-link-img grow"></img></a>
     </div>
@@ -46,7 +47,7 @@
         </div>
     </div>
 </section>
-<section class="leaderboard-intro">
+<section class="leaderboard-intro-section standard-section-height">
     <div class="leaderboard-intro-bg-img">
         <div class="leaderboard-intro-container">
             <h2 class="section-title uppercase flame">"Head" to our leaderboard...</h2>
