--- a/static/css/components/pages.scss
+++ b/static/css/components/pages.scss
@@ -21,7 +21,7 @@ hr {
 }
 
 .welcome-message-section {
-    margin: 112px auto 0;
+    margin: 80px auto 0;
     background-color: rgba(255, 255, 255, .75);
     width: 800px;
     border: 4px solid rgba(255, 82, 82, 0.92);
@@ -47,18 +47,15 @@ hr {
     width: 75%;
     text-align: center;
     margin: 0 auto;
-    padding: 60px 0;
+    padding: 60px 0 30px;
+}
+
+.welcome-para:nth-of-type(2){
+    padding: 0 0 60px;
 }
 
 .home-image {
     background-image: url('../images/bbq.jpg');
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    z-index: -1;
-    background-repeat: repeat;
-    background-position: center;
-    background-size: cover;
 }
 
 .recipes-intro-section,
@@ -77,7 +74,7 @@ hr {
 }
 
 .ingredients-link-img {
-    margin: 64px 0 0;
+    margin: 26px 0 0;
 }
 
 .ingredients-intro-text {
@@ -111,7 +108,7 @@ hr {
     padding-right: 50px;
 }
 
-.leaderboard-intro {
+.leaderboard-intro-section {
     width: 100%;
     min-height: 800px;
     height: 800px;
@@ -127,30 +124,73 @@ hr {
 
 .leaderboard-intro-bg-img {
     background-image: url('../images/head-chef.jpg');
-    @extend %contain-background;
+    @extend %set-background;
     width: 100%;
     height: 100%;
+}
+
+.leaderboard-intro-section,
+.recipes-intro-section,
+.ingredients-intro-section {
+    min-width: 1900px;
 }
 
 // Sign-up ---------------------------------------------------------------------
 
 .sign-up-header {
-    margin: 50px 0 0;
+    position: relative;
+    top: 254px;
     max-width: 600px;
 }
 
-.sign-up-header ~ .sign-up-form {
+.column .sign-up-form-container {
     display: flex;
     justify-content: center;
     padding: 50px;
-    margin: 20px auto;
-    border: 1px solid #000;
-    width: 400px;
+    margin: 50px auto;
+    width: 350px;
+    height: 510px;
     text-align: center;
+    background-image: url(../images/chili-drawing-red-bell-pepper.png);
+    @extend %contain-background;
 }
 
 .sign-up-btn {
     float: none;
+}
+
+.sign-up-form {
+    position: relative;
+    top: 172px;
+}
+
+.new-user-form li label {
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: 4px;
+}
+
+.flame-img-1,
+.flame-img-2 {
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background-image: url(../images/flame2.jpg);
+    @extend %contain-background;
+}
+
+.flame-img-1 {
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: 'FlipH';
+}
+
+.flame-img-2 {
+    right: 0;
+    bottom: 83px;
 }
 
 // Profile page ----------------------------------------------------------------
