--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -44,7 +44,7 @@ h1 {
 }
 
 p {
-    padding: 26px 20px 26px 0;
+    padding: 26px 0 0;
     letter-spacing: 3px;
     font-size: 13px;
     line-height: 20px;
@@ -118,7 +118,7 @@ a:visited {
 
 footer {
     background-color: $black;
-    min-height: 300px;
+    min-height: 266px;
 }
 
 .footer-item {
@@ -134,9 +134,34 @@ footer {
 }
 
 .standard-section-height {
-    min-height: 720px;
+    min-height: 770px;
 }
 
 input {
     margin: 20px 0;
+}
+
+li input {
+    font-size: 30px;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 1px;
+    margin: 15px 0;
+}
+
+.page-bg {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: -1;
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.full-width-div {
+    width: 100%;
+}
+
+.no-overflow {
+    overflow: hidden;
 }
