--- a/static/css/helpers/colors.scss
+++ b/static/css/helpers/colors.scss
@@ -15,3 +15,5 @@ $highlight-pale-blue: #b8e3f9;
 $fire-red: #ff0000;
 $flame-orange: #f99806;
 $flame-yellow: #ffff00;
+
+$pop-up-box-yellow: #f2ff00;
