--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -70,7 +70,7 @@ a:visited {
 
 .sticky-div {
     position: sticky;
-    top: 70px;
+    top: 120px;
     background-color: $white;
 }
 
@@ -164,4 +164,8 @@ li input {
 
 .no-overflow {
     overflow: hidden;
+}
+
+.no-float {
+    float: none;
 }
