--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="home-image page-bg"></div>
 <div class="container">
-    <section class="welcome-message-section zero-to-hero">
+    <section class="welcome-message-section hidden-to-visible">
         <div class="welcome-message no-opacity">
             <h3 class="uppercase">Welcome to</h2>
                 <h1 class="welcome-header flame uppercase">Flame & Sizzle</h1>
@@ -9,7 +9,7 @@
                 <h3 class="uppercase">It's cooking time!</h2>
         </div>
         <div class="welcome-para-container no-opacity">
-            <p class="welcome-para">Add your own recipes and let others provide a review. Each review will be scored between 0 - 5 flames which we will accumulate for every recipe you add.</p>
+            <p class="welcome-para">All of our recipes are added by our users.  Try them, review them, add your own.  It's that simple!</p>
             <p class="welcome-para">Will you be King or Queen of our leaderboard?!</p>
         </div>
     </section>
