--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -1,21 +1,27 @@
-{% extends 'base.html' %} {% block content %} 
+{% extends 'base.html' %} {% block content %}
 
-<div class="container">
-    <div class="row">
-        <form action="{{ url_for('log_in') }}" method="POST">
-            <div class="row">
-                <ul class="new-user-form">
-                    <li><label for="email">Email Address</label></li>
-                    <li><input id="email" name="email" type="email"></li>
-                    <hr>
-                    <li><label for="password">Password</label></li>
-                    <li><input id="password" name="password" type="password"></li>
-                    <hr>
-                    <button type="submit">Submit</button>
-                </ul>
-            </div>
-        </form>
+<section class="container standard-section-height sign-up-container no-overflow">
+    <div class="column sign-in-header pre-slide-in-from-left">
+        <h2 class="section-title uppercase flame">Log in!</h2>
+        <p>Already a member? Great news!</p>
+        <p>What are you waiting for?! Pop on your chef hat and get cooking...</p>
+        <img class="chep-gif" src="{{ url_for('static', filename='images/chef.webp') }}">
     </div>
-</div>
+    <div class="column pre-slide-in-from-right">
+        <div class="sign-up-or-in-form-container chef-hat-img">
+            <form action="{{ url_for('log_in') }}" method="POST" class="sign-up-or-in-form">
+                <div class="row">
+                    <ul class="new-user-form">
+                        <li><label for="email" class="sign-in-label">Email Address</label></li>
+                        <li><input id="email" name="email" type="email"></li>
+                        <li><label for="password" class="sign-in-label">Password</label></li>
+                        <li><input id="password" name="password" type="password"></li>
+                        <button class="no-float" type="submit">Submit</button>
+                    </ul>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
