--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="container">
-    <div class="sticky-div">
-        <h1>Recipes list</h1>
+<section class="container standard-section-height">
+    <div class="sticky-div recipe-header-box">
+        <h2 class="section-title">Recipes list</h2>
 
         <p>Please choose a recipe you would like to try from our list!</p>
         <p>Alternatively, why not add your own and see if people like it?</p>
@@ -53,5 +53,5 @@
         <div class="recipe-row-right"></div>
         {% endif %} {% endfor %}
     </div>
-</div>
+</section>
 {% endblock %}
