--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,15 +3,15 @@
     <div class="flame-img-1"></div>
     <div class="flame-img-2"></div>
 </div>
-<section class="container standard-section-height sign-up-container">
-    <div class="column sign-up-header">
-        <h2 class="section-title uppercase flame">Welcome to the club!</h2>
+<section class="container standard-section-height sign-up-container no-overflow">
+    <div class="column sign-up-header pre-slide-in-from-left">
+        <h2 class="section-title uppercase flame">Become the Master Chef!</h2>
         <p>The sooner you sign up, the sooner you can add recipes, the sooner you can be King of the World! Or the website at least. <i class="far fa-smile-beam"></i></p>
-        <p>Just a few details for now, then head over to your profile page when you're ready.</p>
+        <p>Just a few details for now, then head over to your profile page to personalise when you're ready.</p>
     </div>
-    <div class="column">
-        <div class="sign-up-form-container">
-            <form action="{{ url_for('add_new_user') }}" method="POST" class="sign-up-form">
+    <div class="column pre-slide-in-from-right">
+        <div class="sign-up-or-in-form-container red-pepper-img">
+            <form action="{{ url_for('add_new_user') }}" method="POST" class="sign-up-or-in-form">
                 <div class="row">
                     <ul class="new-user-form">
                         <li><label for="email">Email Address</label></li>
